<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newSeasonSetup">

    <EditText
        android:id="@+id/newSeasonName"
        android:layout_width="308dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:autoText="false"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/newSeasonString"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/newSeasonButtonString"
        android:textColor="@color/maroon"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createNewSeasonButton"
        android:onClick="addSeasonName"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="171dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:background="@color/maroon"
        android:text="@string/createNewSeasonString"
        android:textColor="@color/gold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newSeasonName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/transitionToSeasonInit"
        android:textColor="@color/maroon"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/goToSeasonInitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seasonCreatedText" />

    <Button
        android:id="@+id/goToSeasonInitButton"
        android:visibility="invisible"
        android:layout_width="227dp"
        android:layout_height="46dp"
        android:layout_marginBottom="40dp"
        android:background="@color/maroon"
        android:text="@string/goToSeasonInitButton"
        android:textColor="@color/gold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/seasonCreatedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/maroon"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createNewSeasonButton" />

</androidx.constraintlayout.widget.ConstraintLayout>